--- a/private/style.css
+++ b/private/style.css
@@ -4,7 +4,7 @@ body {
 	
 }
 
-form {
+#main_form {
 	
 	border-style: solid;
 	border-width: 1px;
@@ -51,5 +51,19 @@ input[type="number"] {
 #centered {
 	
 	text-align: center;
+	
+}
+
+#table_border {
+	
+	border: 1px solid black;
+	border-collapse: collapse;
+	
+}
+
+#td_border {
+	
+	border: 1px solid black;
+	padding: 5px;
 	
 }
